--- a/src/CSS/Footer.css
+++ b/src/CSS/Footer.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding-left: 150px;
   padding-right: 400px;
-  background-color: #d6d5cb;
+  background-color: #f6f6f2;
   color: grey;
   height: 15vh;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
