--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -5,13 +5,14 @@ body {
 
 .mainProject {
   height: 90vh;
-  background-color: #d6d5cb;
+  background-color: #eee2dc;
   color: grey;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 .mainProject h1 {
   margin: 0;
+  color: #ac3b61;
   padding-top: 40px;
   font-size: 60px;
   text-align: center;
