--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -7,11 +7,13 @@ body {
   margin: 0;
   padding-left: 400px;
   padding-right: 400px;
-  background-color: grey;
+  background-color: #edc7b7;
   height: 60vh;
+  color: #003b4a;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
+
 .mainSkills h1,
 h3 {
   margin: 0;
@@ -19,6 +21,9 @@ h3 {
   font-size: 60px;
   text-align: center;
   padding-bottom: 50px;
+}
+.mainSkills h3 {
+  text-align: center;
 }
 .mainSkills h3 {
   padding-top: 30px;
