--- a/src/CSS/Tag.css
+++ b/src/CSS/Tag.css
@@ -1,7 +1,7 @@
 .mainTag {
-  float: left;
-  padding-left: 30px;
   transition: transform 0.5s ease-in-out;
+  float: left;
+  padding-left: 3vw;
 }
 .mainTag:hover {
   transform: translateY(5px);
