--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -47,4 +47,9 @@ body {
   position: absolute;
   height: 50 vh;
   left: 47vw;
+  transition: transform 0.5s ease-in-out;
+}
+.down:hover {
+  transform: translateY(-10px);
+  transition: 0.5s;
 }
