--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -5,15 +5,12 @@ body {
 
 .mainSkills {
   margin: 0;
-  padding-left: 400px;
-  padding-right: 400px;
   background-color: #edc7b7;
-  height: 60vh;
+  height: 80vh;
   color: #003b4a;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
-
 .mainSkills h1,
 h3 {
   margin: 0;
@@ -23,9 +20,15 @@ h3 {
   padding-bottom: 50px;
 }
 .mainSkills h3 {
-  text-align: center;
-}
-.mainSkills h3 {
   padding-top: 30px;
   font-size: 30px;
+}
+.seperate {
+  padding-bottom: 70px;
+  display: flex;
+}
+
+.oneSkill {
+  margin: 0;
+  margin-left: 5vw;
 }
