--- a/src/CSS/Tag.css
+++ b/src/CSS/Tag.css
@@ -1,17 +1,22 @@
 .mainTag {
+  background-color: #e4d4c8;
+  color: #201a1e;
+  height: 50vh;
+  width: 40vh;
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   transition: transform 0.5s ease-in-out;
-  float: left;
-  padding-left: 3vw;
 }
+
 .mainTag:hover {
-  transform: translateY(5px);
+  transform: translateY(-10px);
   transition: 0.5s;
 }
 .mainTag p {
-  font-family: Robot Normal;
-  background-color: #d6d5cb;
-  color: black;
-  padding: 5px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 12px;
+  margin: 0;
+  padding-bottom: 2vh;
+  font-size: 2vh;
+  text-align: center;
 }
