--- a/src/CSS/ProjectCard.css
+++ b/src/CSS/ProjectCard.css
@@ -1,6 +1,6 @@
 .projectCard {
   background-color: #e4d4c8;
-  color: #201a1e;
+  color: #123c69;
   height: 250px;
   width: 500px;
   border-radius: 25px;
