--- a/src/CSS/Footer.css
+++ b/src/CSS/Footer.css
@@ -7,8 +7,7 @@ body {
   margin: 0;
   padding-left: 150px;
   padding-right: 400px;
-  background-color: #f6f6f2;
-  color: grey;
+  background-color: #eee2dc;
   height: 15vh;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
