--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -18,6 +18,7 @@ h3 {
   font-size: 60px;
   text-align: center;
   padding-bottom: 50px;
+  color: #ac3b61;
 }
 .mainSkills h3 {
   padding-top: 30px;
